src/objects/EventApi__Event__c.object
<CustomObject>
    <fields>
        <fullName>EventApi__Schedule_Item_Item_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is a system field. Update at your own risk.</description>
        <inlineHelpText>This field is a system field. Update at your own risk.</inlineHelpText>
        <label>SYSTEM</label>
        <referenceTo>OrderApi__Item_Class__c</referenceTo>
        <relationshipLabel>Events (Schedule Item Item Class)</relationshipLabel>
        <relationshipName>Events2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Search_All_Contacts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>By selecting this field, any contact authenticated or unauthenticated will be able to search all contacts in the system. (Privacy settings considered)</description>
        <inlineHelpText>By selecting this field, any contact authenticated or unauthenticated will be able to search all contacts in the system. (Privacy settings considered)</inlineHelpText>
        <label>Search All Contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Session_Shopping_Cart_Instructions__c</fullName>
        <defaultValue>$Label.eventapi__session_shopping_cart_instructions</defaultValue>
        <description>The text in this field will be used to guide buyers through the shopping cart when selecting sessions.</description>
        <inlineHelpText>The text in this field will be used to guide buyers through the shopping cart when selecting sessions.</inlineHelpText>
        <label>Session Shopping Cart Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EventApi__Session_Shopping_Cart_Label__c</fullName>
        <defaultValue>$Label.eventapi__session_shopping_cart_label</defaultValue>
        <description>The text in this field will display in the shopping cart side bar navigation once the ticket type has been selected.</description>
        <inlineHelpText>The text in this field will display in the shopping cart side bar navigation once the ticket type has been selected.</inlineHelpText>
        <label>Session Shopping Cart Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Sold_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies if number of registered attendee records are reached to event capacity.</description>
        <inlineHelpText>Identifies if number of registered attendee records are reached to event capacity.</inlineHelpText>
        <label>Sold Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Speakers_HTML__c</fullName>
        <description>Text appears at the top of the &quot;Speakers&quot; page.</description>
        <inlineHelpText>Text appears at the top of the &quot;Speakers&quot; page.</inlineHelpText>
        <label>Speakers HTML</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EventApi__Sponsor_Item_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is a system field. Update at your own risk.</description>
        <inlineHelpText>This field is a system field. Update at your own risk.</inlineHelpText>
        <label>SYSTEM</label>
        <referenceTo>OrderApi__Item_Class__c</referenceTo>
        <relationshipLabel>Events (Sponsor Item Class)</relationshipLabel>
        <relationshipName>Events3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Sponsors_HTML__c</fullName>
        <description>Text appears at the top of the &quot;Sponsors&quot; page.</description>
        <inlineHelpText>Text appears at the top of the &quot;Sponsors&quot; page.</inlineHelpText>
        <label>Sponsors HTML</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EventApi__Start_Date_Time__c</fullName>
        <description>**Required** The event start date and time (mm/dd/yyyy hh:mm:ss).</description>
        <inlineHelpText>**Required** The event start date and time (mm/dd/yyyy hh:mm:ss).</inlineHelpText>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EventApi__Start_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <description>**Required** The event start date.</description>
        <inlineHelpText>**Required** The event start date.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EventApi__Start_Time__c</fullName>
        <description>**Required** The event start time (HH:MM).</description>
        <inlineHelpText>**Required** The event start time (HH:MM).</inlineHelpText>
        <label>Start Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Status__c</fullName>
        <description>Status of the event. Must be &quot;active&quot; to be visible in the Portal.</description>
        <inlineHelpText>Status of the event. Must be &quot;active&quot; to be visible in the Portal.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                    <color>#0B6FCE</color>
                    <default>true</default>
                    <label>Planned</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                    <color>#78C953</color>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                    <color>#E27001</color>
                    <label>Closed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventApi__Text_Color__c</fullName>
        <defaultValue>&quot;#333333&quot;</defaultValue>
        <description>Color of all text in the related event. Valid hexadecimal notation required.</description>
        <inlineHelpText>Color of all text in the related event. Valid hexadecimal notation required.</inlineHelpText>
        <label>Text Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Thumbnail_Image_URL__c</fullName>
        <description>Secondary image for the event.</description>
        <inlineHelpText>Secondary image for the event.</inlineHelpText>
        <label>Thumbnail Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EventApi__Ticket_Sales_Start_Date__c</fullName>
        <description>The date ticket sales or registration begins for the event. Defaults to the &quot;Active&quot; date if left blank.</description>
        <inlineHelpText>The date ticket sales or registration begins for the event. Defaults to the &quot;Active&quot; date if left blank.</inlineHelpText>
        <label>Ticket Sales Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EventApi__Ticket_Type_Item_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is a system field. Update at your own risk.</description>
        <inlineHelpText>This field is a system field. Update at your own risk.</inlineHelpText>
        <label>SYSTEM</label>
        <referenceTo>OrderApi__Item_Class__c</referenceTo>
        <relationshipLabel>Events (Ticket Type Item Class)</relationshipLabel>
        <relationshipName>Events1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Ticket_Type_Sort_Field__c</fullName>
        <defaultValue>&quot;NAME&quot;</defaultValue>
        <description>Use with Ticket Type Sort Order. Specifies the field that is used to organize tickets on the registration page. Use &quot;EventApi__Price__c&quot; for price and &quot;Name&quot; for name.</description>
        <inlineHelpText>Use with Ticket Type Sort Order. Specifies the field that is used to organize tickets on the registration page. Use &quot;EventApi__Price__c&quot; for price and &quot;Name&quot; for name.</inlineHelpText>
        <label>Ticket Type Sort Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Ticket_Type_Sort_Order__c</fullName>
        <description>Use with Ticket Type Sort Field. Specifies whether tickets are shown in ascending or descending order.</description>
        <inlineHelpText>Use with Ticket Type Sort Field. Specifies whether tickets are shown in ascending or descending order.</inlineHelpText>
        <label>Ticket Type Sort Order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ascending</fullName>
                    <default>true</default>
                    <label>Ascending</label>
                </value>
                <value>
                    <fullName>Descending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventApi__Time_Zone__c</fullName>
        <description>The time zone of the event location.</description>
        <inlineHelpText>The time zone of the event location.</inlineHelpText>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>(GMT+13:00) Pacific/Enderbury</fullName>
                </value>
                <value>
                    <fullName>(GMT+13:00) Pacific/Tongatapu</fullName>
                </value>
                <value>
                    <fullName>(GMT+12:45) Pacific/Chatham</fullName>
                </value>
                <value>
                    <fullName>(GMT+12:00) Asia/Kamchatka</fullName>
                </value>
                <value>
                    <fullName>(GMT+12:00) Pacific/Auckland</fullName>
                </value>
                <value>
                    <fullName>(GMT+12:00) Pacific/Fiji</fullName>
                </value>
                <value>
                    <fullName>(GMT+11:30) Pacific/Norfolk</fullName>
                </value>
                <value>
                    <fullName>(GMT+11:00) Pacific/Guadalcanal</fullName>
                </value>
                <value>
                    <fullName>(GMT+10:30) Australia/Lord_Howe</fullName>
                </value>
                <value>
                    <fullName>(GMT+10:00) Australia/Brisbane</fullName>
                </value>
                <value>
                    <fullName>(GMT+10:00) Australia/Sydney</fullName>
                </value>
                <value>
                    <fullName>(GMT+09:30) Australia/Adelaide</fullName>
                </value>
                <value>
                    <fullName>(GMT+09:30) Australia/Darwin</fullName>
                </value>
                <value>
                    <fullName>(GMT+09:00) Asia/Seoul</fullName>
                </value>
                <value>
                    <fullName>(GMT+09:00) Asia/Tokyo</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Asia/Hong_Kong</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Asia/Kuala_Lumpur</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Asia/Manila</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Asia/Shanghai</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Asia/Singapore</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Asia/Taipei</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Australia/Perth</fullName>
                </value>
                <value>
                    <fullName>(GMT+07:00) Asia/Bangkok</fullName>
                </value>
                <value>
                    <fullName>(GMT+07:00) Asia/Ho_Chi_Minh</fullName>
                </value>
                <value>
                    <fullName>(GMT+07:00) Asia/Jakarta</fullName>
                </value>
                <value>
                    <fullName>(GMT+06:30) Asia/Rangoon</fullName>
                </value>
                <value>
                    <fullName>(GMT+06:00) Asia/Dhaka</fullName>
                </value>
                <value>
                    <fullName>(GMT+05:45) Asia/Kathmandu</fullName>
                </value>
                <value>
                    <fullName>(GMT+05:30) Asia/Colombo</fullName>
                </value>
                <value>
                    <fullName>(GMT+05:30) Asia/Kolkata</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventApi__Topic__c</fullName>
        <description>** System Calculated Recommended ** Provide users the ability to search for Events by Topic by selecting the most appropriate Topic from the given list. Derives from the parent Event Category if undefined.</description>
        <inlineHelpText>** System Calculated Recommended ** Provide users the ability to search for Events by Topic by selecting the most appropriate Topic from the given list. Derives from the parent Event Category if undefined.</inlineHelpText>
        <label>Topic</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Academia</fullName>
                </value>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Aerospace</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Airlines</fullName>
                </value>
                <value>
                    <fullName>Alternative Medicine</fullName>
                </value>
                <value>
                    <fullName>Apparel &amp; Fashion</fullName>
                </value>
                <value>
                    <fullName>Architecture &amp; Planning</fullName>
                </value>
                <value>
                    <fullName>Arts &amp; Crafts</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Broadcast Media</fullName>
                </value>
                <value>
                    <fullName>Building Materials</fullName>
                </value>
                <value>
                    <fullName>Business Supplies &amp; Equipment</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Civic &amp; Social Organizations</fullName>
                </value>
                <value>
                    <fullName>Civil Engineering</fullName>
                </value>
                <value>
                    <fullName>Civil Service</fullName>
                </value>
                <value>
                    <fullName>Composites</fullName>
                </value>
                <value>
                    <fullName>Computer &amp; Network Security</fullName>
                </value>
                <value>
                    <fullName>Computer Games</fullName>
                </value>
                <value>
                    <fullName>Computer Hardware</fullName>
                </value>
                <value>
                    <fullName>Computer Networking</fullName>
                </value>
                <value>
                    <fullName>Computer Software</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Consumer Electronics</fullName>
                </value>
                <value>
                    <fullName>Consumer Goods</fullName>
                </value>
                <value>
                    <fullName>Consumer Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventApi__Venue_HTML__c</fullName>
        <description>Text appears at the top of the &quot;Venues&quot; page.</description>
        <inlineHelpText>Text appears at the top of the &quot;Venues&quot; page.</inlineHelpText>
        <label>Venue HTML</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EventApi__Waitlist_Entries__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of people currently waitlisted for the event. Does not include people waitlisted for individual ticket types.</description>
        <inlineHelpText>Number of people currently waitlisted for the event. Does not include people waitlisted for individual ticket types.</inlineHelpText>
        <label>RESERVED</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_URL__c</fullName>
        <formula>&quot;https://uat-aacr.cs195.force.com/eventapi__router?event=&quot; &amp; Id</formula>
        <label>Event URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Eligible_Mass_Registration__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Allows for mass registration of event tickets but should only be used for free events. That will expose the mass registration feature on the event.</inlineHelpText>
        <label>Is Eligible Mass Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Virtual__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies this event as a virtual meeting.</description>
        <inlineHelpText>Identifies this event as a virtual meeting.</inlineHelpText>
        <label>Is Virtual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JP_Institution__c</fullName>
        <label>Joint Providership Institution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Joint_Providership__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Joint Providership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Letter_of_Participation__c</fullName>
        <label>Letter of Participation</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Max_CME_Credits__c</fullName>
        <label>Max CME Credits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>Will be used to mail merge information on registration confirmation.</description>
        <inlineHelpText>Used to mail merge information on registration confirmation.</inlineHelpText>
        <label>Message</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ROEApi__Active_Ticket_Type_Count__c</fullName>
        <description>Total number of active ticket types</description>
        <inlineHelpText>Total number of active ticket types.</inlineHelpText>
        <label>SYSTEM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ROEApi__Event_Duration_Text__c</fullName>
        <description>** System Calculated** Event Duration Calculated based on start and end date</description>
        <inlineHelpText>** System Calculated** Event Duration Calculated based on start and end date</inlineHelpText>
        <label>SYSTEM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Event</label>
    <listViews>
        <fullName>EventApi__All</fullName>
        <columns>NAME</columns>
        <columns>EventApi__Status__c</columns>
        <columns>EventApi__Registration_Style__c</columns>
        <columns>EventApi__Capacity__c</columns>
        <columns>EventApi__Start_Date_Time__c</columns>
        <columns>EventApi__End_Date_Time__c</columns>
        <columns>EventApi__Ticket_Sales_Start_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Non_AACR_CME_Events</fullName>
        <columns>NAME</columns>
        <columns>EventApi__Status__c</columns>
        <columns>EventApi__End_Date__c</columns>
        <columns>EventApi__Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EventApi__Event_Category__c</field>
            <operation>equals</operation>
            <value>Non-AACR Events</value>
        </filters>
        <label>Non-AACR CME Events</label>
    </listViews>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Joint_Providership</fullName>
        <active>true</active>
        <description>JP Institution is required when the Joint Providership is checked</description>
        <errorConditionFormula>AND( Joint_Providership__c=TRUE, ISBLANK( JP_Institution__c ))</errorConditionFormula>
        <errorDisplayField>JP_Institution__c</errorDisplayField>
        <errorMessage>The Joint Providership Institution name is required.</errorMessage>
    </validationRules>
</CustomObject>